<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>me.minidigger</groupId>
  <artifactId>voxelgameslib</artifactId>
  <version>2.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Voxelgameslib</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <defaultGoal>clean package</defaultGoal>
    <plugins>
      <!-- compiler -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <!-- shade -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml
          </dependencyReducedPomLocation>
          <relocations>
            <relocation>
              <pattern>co.aikar.commands</pattern>
              <shadedPattern>me.minidigger.voxelgameslib.command</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <minimizeJar>true</minimizeJar>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- copy finished artifact -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.8</version>
        <executions>
          <execution>
            <id>copy-installed</id>
            <phase>install</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>${project.groupId}</groupId>
                  <artifactId>${project.artifactId}</artifactId>
                  <version>${project.version}</version>
                  <type>${project.packaging}</type>
                </artifactItem>
              </artifactItems>
              <outputDirectory>../testserver/plugins</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <repositories>
    <repository>
      <id>spigotmc-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
    </repository>
    <repository>
      <id>sonatype</id>
      <url>https://oss.sonatype.org/content/groups/public/</url>
    </repository>
    <repository>
      <id>aikar</id>
      <url>https://ci.emc.gs/nexus/content/groups/aikar/</url>
    </repository>
    <repository>
      <id>jskill</id>
      <url>https://raw.githubusercontent.com/allanmc/JSkills/mvn-repo/</url>
    </repository>
    <repository>
      <id>java-utilities</id>
      <url>http://dl.bintray.com/etienne/java-utilities</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- Spigot API -->
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.12-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <!-- Command Framework (also timings) -->
    <dependency>
      <groupId>co.aikar</groupId>
      <artifactId>acf-core</artifactId>
      <version>0.4.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
    <!-- DI framework -->
    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
      <version>4.1.0</version>
      <scope>compile</scope>
    </dependency>
    <!-- run time class lookup -->
    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>0.9.11</version>
      <scope>compile</scope>
    </dependency>
    <!-- code quality -->
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>2.0.1</version>
    </dependency>
    <!-- annotation based code generation -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.16.0</version>
    </dependency>
    <!-- jkill - true skill for java -->
    <dependency>
      <groupId>de.davidbilge</groupId>
      <artifactId>jskill</artifactId>
      <version>1.1-SNAPSHOT</version>
    </dependency>
    <!-- zip stuff -->
    <dependency>
      <groupId>net.lingala.zip4j</groupId>
      <artifactId>zip4j</artifactId>
      <version>1.3.2</version>
    </dependency>
    <!-- ordered property files-->
    <dependency>
      <groupId>nu.studer</groupId>
      <artifactId>java-ordered-properties</artifactId>
      <version>1.0.1</version>
    </dependency>
    <!-- taskchain -->
    <dependency>
      <groupId>co.aikar</groupId>
      <artifactId>taskchain-bukkit</artifactId>
      <version>3.6.0</version>
    </dependency>
    <!-- text -->
    <dependency>
      <groupId>net.kyori</groupId>
      <artifactId>text</artifactId>
      <version>1.12-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>
</project>
